Cambios para ASMS 23/10/2023

--- a/angular.json
+++ b/angular.json
@@ -136,7 +136,8 @@
   "cli": {
     "schematicCollections": [
       "@ionic/angular-toolkit"
-    ]
+    ],
+    "analytics": "5f5114ac-65e2-4846-8124-336d8efdac0c"
   },
   "schematics": {
     "@ionic/angular-toolkit:component": {
